--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.1.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
+    "vue-masonry": "^0.11.8",
     "vue-moment": "^4.0.0"
   },
   "devDependencies": {
