--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-masonry": "^0.11.8",
-    "vue-moment": "^4.0.0"
+    "vue-moment": "^4.0.0",
+    "vuesax": "^3.11.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
